src/_header/styles.scss
header {
  height: 4rem;
  width: 100%;
  padding: 0 2rem;
  position: sticky;
  top: 0;
  z-index: 1;
  border-bottom: 0.0625rem solid var(--robin-blue);
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #fff;

  .left {
    display: flex;
    align-items: center;
    height: 100%;

    p {
      font-size: 1.125rem;
      font-weight: 700;
      border-left: 0.0625rem solid #e6e6e6;
      height: 100%;
      margin-block-start: 0;
      margin-block-end: 0;
      display: flex;
      align-items: center;
      margin-left: 1.25rem;
      padding-left: 1.25rem;

      &.last-edited {
        border-left: 0;
        font-size: 0.875rem;
        color: var(--subtext);
        margin-left: 0;
        font-weight: 500;
      }
    }
  }

  .right {
    display: flex;
    align-items: center;

    button {
      &:nth-child(1) {
        margin-right: 0.75rem;
      }
      
      img {
        margin-left: 0.5rem;
      }
    }

    .user-icon {
      height: 2.5rem;
      width: 2.5rem;
      justify-content: center;
      display: flex;
      align-items: center;
      font-weight: 700;
      background: #E6E9F1;
      margin-left: 1rem;
      border-radius: 50%;
    }

  }
}

